--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
   <header>
     <h1>Title of Webpage</h1>
   </header>
-  <div class="section">
-    <h1>Section 1</h1>
-    <!-- Add text, images, and links for section 1 below. -->
 
+    <h1>Section 1</h1>
+  
+
+    
+    <!-- Add text, images, and links for section 1 below. -->
+  <img src="https://www.noaa.gov/sites/default/files/styles/landscape_width_1275/public/2022-03/PHOTO-Climate-Collage-Diagonal-Design-NOAA-Communications-NO-NOAA-Logo.jpg" alt="picture 1"width="250" height="250">
+  <a href="https://climatechange.chicago.gov/climate-impacts/climate-impacts-human-health#:~:text=The%20impact%20of%20 climate%20change,and%20the%20 weather%20we%20 experience.">link 1<a/>
   </div>
   <hr> <!-- The hr tag creates that line you see between sections -->
   <div class="section">
     <h1>Section 2</h1>
     <!-- Add text, images, and links for section 2 below. -->
-
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzGt-1AtU-Ey2B1EYzmDpKKhbT3zN4Shy5yw&usqp=CAU" alt="picture 2" width="250" height="250">
+    <a href="https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts">link 2<a/>
   </div>
   <hr>
   <div class="section">
     <h1>Section 3</h1>
     <!-- Add text, images, and links for section 3 below. -->
-
+    <img src="https://www.wisconsinacademy.org/sites/wisconsinacademy.org/files/styles/spotlight_880x495/public/Polar.jpg?itok=p-04pyv6" alt="picture 3" width="250" height="250">
+    <a href="https://www.who.int/news-room/fact-sheets/detail/climate-change-and-health">link 3<a/>
   </div>
 
 </body>
